--- a/components/_crud/compare.ejs
+++ b/components/_crud/compare.ejs
@@ -66,70 +66,134 @@
 		</form>
 	</div>
 
-	<div class="well">
-		<% 	var buttonWidth = 2 ;
-			var colsPerRow = 12 ;
-			var col = 0 ;
-			var rows = [] ;
-			var row = [] ;
-			var sortedRecords = records ;
+	<!-- Nav tabs -->
+	<ul class="nav nav-tabs">
+	  <li class="active"><a href="#gridmode" data-toggle="tab">Grid mode</a></li>
+	  <li><a href="#listmode" data-toggle="tab">List mode</a></li>
+	</ul>
 
-			if (compareConfig.rankingFieldName){
-				sortedRecords = _.sortBy(records,function(a,b){
-					if (a[compareConfig.rankingFieldName] < b[compareConfig.rankingFieldName])
-					     return -1;
-					  if (a[compareConfig.rankingFieldName] > b[compareConfig.rankingFieldName])
-					    return 1;
-					  return 0;
-				}) ;
-			}
 
-			_.each(sortedRecords, function(record) {
-				var buttonTitle = record[compareConfig.labelFieldName].crudRender() ;
+	<!-- Tab panes -->
+	<div class="tab-content">
+	  <div class="tab-pane active" id="gridmode">
+	  		<br />
+			<div  class="btn-group btn-group-justified">
+					<% _.each(compareConfig.rankingLevels, function(option) { %>
+						<a id="ptypebutton_rankinglevel_<%= option.class %>"  href="javascript:_crud.ActivateSelectedButtonInCompare('<%= option.class %>','rankinglevel')" class="ptypebutton_rankinglevel btn btn-default">
+							<div class=""><%= option.class %></div>
+						</a>
+					<% }) %> 
+			</div>
+			<hr />
+			<div class="well">
+				<% 	var buttonWidth = 2 ;
+					var colsPerRow = 12 ;
+					var col = 0 ;
+					var rows = [] ;
+					var row = [] ;
+					var sortedRecords = records ;
+
+					if (compareConfig.rankingFieldName){
+						sortedRecords = _.sortBy(records,function(a,b){
+							if (a[compareConfig.rankingFieldName] < b[compareConfig.rankingFieldName])
+							     return -1;
+							  if (a[compareConfig.rankingFieldName] > b[compareConfig.rankingFieldName])
+							    return 1;
+							  return 0;
+						}) ;
+					}
+
+					_.each(sortedRecords, function(record) {
+						var buttonTitle = record[compareConfig.labelFieldName].crudRender() ;
+						var buttonHref = "/" + compareConfig.modelName + "/show/" + record[compareConfig.objectIdFieldName];
+						var buttonClassName = "alert-info" ;
+						if (compareConfig.rankingFieldName){
+							var ranking = record[compareConfig.rankingFieldName] ;
+							for (var rl = compareConfig.rankingLevels.length-1; rl>=0; rl--){
+								if (ranking <= compareConfig.rankingLevels[rl].ranking){
+									buttonClassName = "alert-" + compareConfig.rankingLevels[rl].class ;
+								}
+							}
+						}
+						var button = {
+							buttonTitle : buttonTitle,
+							buttonHref : buttonHref,
+							buttonClassName : buttonClassName
+						}
+						row.push(button) ;
+						col += buttonWidth ;
+						if (col >= colsPerRow){
+							col = 0 ;
+							rows.push(row) ;
+							row = [] ;
+						}
+					})
+
+					if (row.length > 0){
+						rows.push(row) ;
+					}
+
+					_.each(rows,function(row){ %>
+						<div class="row">
+						<% _.each(row,function(col){ %>
+							<div class="col-md-<%= buttonWidth %>">
+								<div class="alert <%= col.buttonClassName %> compare_<%= col.buttonClassName %> compareBtn">
+									<div style="max-height:60px;overflow:hidden">
+										<a href="<%= col.buttonHref %>" title="<%= col.buttonTitle %>">
+											<small><%= col.buttonTitle %></small>
+										</a>
+									</div>
+								</div>
+							</div>
+						<% }) %>
+						</div>
+					<% }) %>
+			</div>
+	  </div>
+
+	  <div class="tab-pane" id="listmode">
+	  	<br />
+	  	<div  class="btn-group btn-group-justified">
+	  			<% _.each(compareConfig.rankingLevels, function(option) { %>
+	  				<a id="ptypebutton_list_rankinglevel_<%= option.class %>"  href="javascript:_crud.ActivateSelectedButtonInCompare('<%= option.class %>','rankinglevel')" class="ptypebutton_rankinglevel btn btn-default">
+	  					<div class=""><%= option.class %></div>
+	  				</a>
+	  			<% }) %> 
+	  	</div>
+	  	<hr />
+		<table class='table'>
+			<tr>
+				<% _.each(compareConfig.summaryFields, function(field) { %> 
+					<th><%= field.label ? field.label : field.name %></th>
+				<% }) %>		
+				<th></th>
+			</tr>
+			
+
+			<% _.each(sortedRecords, function(record) { 
 				var buttonHref = "/" + compareConfig.modelName + "/show/" + record[compareConfig.objectIdFieldName]
-				var buttonClassName = "alert-info" ;
+				var buttonClassName = "info" ;
 				if (compareConfig.rankingFieldName){
 					var ranking = record[compareConfig.rankingFieldName] ;
-					console.log("==== R:"+ ranking);
 					for (var rl = compareConfig.rankingLevels.length-1; rl>=0; rl--){
 						if (ranking <= compareConfig.rankingLevels[rl].ranking){
-							buttonClassName = "alert-" + compareConfig.rankingLevels[rl].class ;
+							buttonClassName = compareConfig.rankingLevels[rl].class ;
 						}
 					}
 				}
-				var button = {
-					buttonTitle : buttonTitle,
-					buttonHref : buttonHref,
-					buttonClassName : buttonClassName
-				}
-				row.push(button) ;
-				col += buttonWidth ;
-				if (col >= colsPerRow){
-					col = 0 ;
-					rows.push(row) ;
-					row = [] ;
-				}
-			})
+			%>
+			<tr class="<%= buttonClassName  %> compare_<%= buttonClassName %> compareBtn" data-id="<%= record[compareConfig.objectIdFieldName] %>" data-model="record">
+				<% _.each(compareConfig.summaryFields, function(field) { %> 
+					<td><%= record[field.name] %></td>
+				<% }) %>	
+				
+				<td><a href="<%= buttonHref %>" class="btn btn-sm btn-primary">Show</a></td>
+				
+			</tr> 
 
-			if (row.length > 0){
-				rows.push(row) ;
-			}
-
-			_.each(rows,function(row){ %>
-				<div class="row">
-				<% _.each(row,function(col){ %>
-					<div class="col-md-<%= buttonWidth %>">
-						<div class="alert <%= col.buttonClassName %>">
-							<div style="max-height:60px;overflow:hidden">
-								<a href="<%= col.buttonHref %>" title="<%= col.buttonTitle %>">
-									<small><%= col.buttonTitle %></small>
-								</a>
-							</div>
-						</div>
-					</div>
-				<% }) %>
-				</div>
 			<% }) %>
+		</table>	  	
+	  </div>
 	</div>
 
 </div>
