--- a/components/_crud/show.ejs
+++ b/components/_crud/show.ejs
@@ -160,7 +160,7 @@
 <!-- Attachments -->
 <div class="container">
 	<% var attachmentClassName = controller ; %> 
-	<% var attachmentIsPublic = attachmentIsPublic ; %>
+	<% var attachmentIsPublic = attachmemtIsPublic ; %>
 	<% include ../fileuploads/attachments.ejs %>
 </div>
 <!-- /Attachments -->
