--- a/components/_crud/show.ejs
+++ b/components/_crud/show.ejs
@@ -49,7 +49,7 @@
 							<% if (field.type == 'text' || field.type == 'read-only-text') { %>
 								<fieldset disabled>
 									<label class="control-label" for="<%= field.name %>"><%= field.label ? field.label : field.name %></label>
-									<input type="text" class="form-control " placeholder="<%= field.label ? field.label : field.name %>" name="<%= field.name %>" value="<%= record[field.name] != "undefined" ? record[field.name] : "" %>"/>
+									<input type="text" class="form-control " placeholder="<%= field.label ? field.label : field.name %>" name="<%= field.name %>" value="<%= record[field.name] != "undefined" ? record[field.name].crudRender(field.format) : "" %>"/>
 								</fieldset>
 							<% } %>
 
@@ -64,9 +64,9 @@
 											var fieldName = field.relationship.inname ;
 											value = record[field.name][fieldName] ;
 											lookUpUrl = "/" + field.relationship.entity + "/show/" + record[field.name].id ;
+										} else {
+											value = record[field.name] ;
 										}
-									} else {
-										value = record[field.name] ;
 									}
 									%>
 									<div class="input-group">
