--- a/components/_crud/index.ejs
+++ b/components/_crud/index.ejs
@@ -75,8 +75,19 @@
 		<tr>
 			<% var mode = "i" ; %>
 			<% _.each(fields, function(field) { %> 
-				<% if (field.ines.indexOf(mode) > -1) { %>
-					<th class="<%= records[0] ? records[0][field.name].textAlign : "" %>"><%= field.label ? field.label : field.name %></th>
+				<% if (field.ines.indexOf(mode) > -1){ %>
+					<% 
+					var textAlign ;
+					var r = 0 ;
+					while (!textAlign){
+						if (records[r]){
+							if (records[r][field.name]) textAlign = records[r][field.name].textAlign ;
+						}
+						r++ ;
+						if (r >= records.length) textAlign = textAlign || " " ;				 
+					}
+					%>
+					<th class="<%= textAlign %>"><%= field.label ? field.label : field.name %></th>
 				<% } %>
 			<% }) %>		
 			<th></th>
@@ -98,7 +109,7 @@
 			<% var mode = "i" ; %>
 			<% _.each(fields, function(field) { %> 
 				<% if (field.ines.indexOf(mode) > -1) { %>
-					<td class="<%= field.class ? field.class : '' %> <%= record[field.name].textAlign %>"><%= record[field.name] ? record[field.name].crudRender(field.format) : "" %></td>
+					<td class="<%= field.class ? field.class : '' %> <%= record[field.name] ? record[field.name].textAlign : "" %>"><%= record[field.name] ? record[field.name].crudRender(field) : "" %></td>
 				<% } %>
 			<% }) %>	
 			<td>
